maxScale overlap fixed; added scale input
maxScale changed to non-inclusive to stop overlapping; added scale input

--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ select {
     border-color: blue;*/
 }
 
-#yearInput {
+#yearInput, #scaleInput {
     width: 70px;
 }
 
